--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "homepage": "https://github.com/resinas/contacts-fis2019",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Manuel Resinas",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
     "nedb": "^1.8.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "jest-extended": "^0.11.2",
+    "supertest": "^4.0.2"
   }
 }
