Added tests to MongoDB and travis support

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - "9"
 services:
   - docker
+  - mongodb
 before_install:
   - wget -qO- https://toolbelt.heroku.com/install.sh | sh
 install:
