--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.8.0",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "passport": "^0.4.1",
+    "passport-localapikey-update": "^0.6.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "jest": "^24.9.0",
