--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,5 +1,3 @@
 deploy:
-  - okteto build -t okteto.dev/api:${OKTETO_GIT_COMMIT} api
+  - okteto build -t okteto.dev/api:${OKTETO_GIT_COMMIT} .
   - helm upgrade --install contacts-backend chart --set tag=${OKTETO_GIT_COMMIT}
-devs:
-  - api/okteto.yml
