--- a/chart/templates/api-deployment.yaml
+++ b/chart/templates/api-deployment.yaml
@@ -33,6 +33,8 @@ spec:
               value: okteto
             - name: MONGODB_HOST
               value: mongodb
+            - name: PORT
+              value: 8080
           ports:
             - name: http
               containerPort: 8080
