--- a/chart/templates/api-deployment.yaml
+++ b/chart/templates/api-deployment.yaml
@@ -33,17 +33,19 @@ spec:
               value: okteto
             - name: MONGODB_HOST
               value: mongodb
+            - name: PORT
+              value: "3000"
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: 3000
               protocol: TCP
           livenessProbe:
             periodSeconds: 1
             httpGet:
               path: /api/v1/healthz
-              port: 8080
+              port: 3000
           readinessProbe:
             periodSeconds: 1
             httpGet:
               path: /api/v1/healthz
-              port: 8080
+              port: 3000
