Adds auto-ingress

--- a/chart/templates/api-service.yaml
+++ b/chart/templates/api-service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: api
   labels:
     {{- include "movies.labels" . | nindent 4 }}
+  annotations:
+    dev.okteto.com/auto-ingress: "true"    
 spec:
   type: ClusterIP
   ports:
