--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,10 @@ jobs:
     services:
       mongo:
         image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: ${{env.APP_MONGO_USER}}
+          MONGO_INITDB_ROOT_PASSWORD: ${{env.APP_MONGO_PASS}}
+          MONGO_INITDB_DATABASE: ${{env.APP_MONGO_DB}}
         options: >-
           --health-cmd mongo
           --health-interval 10s
@@ -46,5 +50,5 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
       env:
-        MONGO_URL: "mongodb://localhost/test"
+        MONGO_URL: "mongodb://test:password@localhost/test"
 
